# sus

./: CMakeLists.txt  Cargo.toml  README.md  main.c  util.h
src/: main.rs  util.rs  window.rs
