[package]
name = "sus"
version = "0.1.0"
authors = ["Raphael Tang <raphpb1912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
log = "0.4"
pretty_env_logger = "0.3"
ctrlc = { version = "3.0", features = ["termination"] }